--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* -------------------- IMPORTED FONTS -------------------------------------- */
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap');
 
 
 /*-------------------- CSS RESET ---------------------------------------------------*/
