--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ menu li {
     list-style: none;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 100%;
 }
 
 button, input[type="submit"]{
@@ -359,10 +360,6 @@ nav li:last-child {
     text-decoration: none;
 }
 
-#social {
-	background-color: #F2F2F2;
-}
-
 #social button {
     transition: all ease-in-out 0.2s;
 }
@@ -418,7 +415,7 @@ footer {
 }
 
 footer img {
-	width: 60%;
+	width: 200px;
 	position: relative;
 	left: 100px;
 	bottom: 40px;
@@ -426,16 +423,131 @@ footer img {
 
 small {
 	position: relative;
-	top:290px;
+	top:240px;
     left: 90px;
 	padding: 1rem;
 }
 
 /*-------------------- MEDIA QUERY (medium) --------------------------------*/
+
 @media screen and (min-width:768px) {
+	
+	body {
+		min-width: 768px;
+	}
+
+	nav {
+		display:block;
+        padding-bottom: 7rem;
+		width: 93%;
+	}
+    
+	nav ul {
+		display:flex;
+		overflow: visible;
+	}
+	
+    nav li img {
+		display: flex;
+		width: 50px
+	}
+
+	#logo {
+		position:absolute;
+		left:0px;
+		top: 0px;
+		width: 80px;
+	}
+
+	form {
+		position: fixed;
+		z-index:5;
+		top:30px;
+		left: 400px
+	}
+
+    h1 {
+		text-align: left;
+	}
+
+	menu  {
+		display:flex;
+		justify-content:center;
+		justify-items: center;
+	}
+
+	menu li {
+		position:relative;
+		top: 100px;
+		right:30px;
+		background-color: #F2F2F2;
+		padding: 2rem 1rem 0.5rem 2rem;
+        background: rgba(255,255,255,0.5)
+	}
+
+	#details {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+		
+	}
+	#details dt {
+		position: relative;
+		left:170px
+	}
+
+	#details dd {
+		position: relative;
+		right: 50px;
+	}
+
+    #food {
+		display:grid;
+		grid-template-columns: 1fr 2fr;
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
+
+	#snacks {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+	}
+
+    #social {
+		position: relative;
+		bottom: 40px;
+		grid-column-start:2;
+	}
+
+	footer {
+		display: grid;
+		grid-template-columns: 2fr 1fr;
+
+	}
+
+	footer img {
+		grid-column-start: 1;
+		width: 350px;
+		left: 40px;
+		bottom: 240px;
+	}
+
+    small {
+		grid-column-start: 1;
+		top: 10rem;
+	}
+	
+	
 
 }
 /*-------------------- MEDIA QUERY (large) ------------------------------------*/
-@media screen and (min-width:1280px) {
 
+@media screen and (min-width:1280px) {
+	
+	body {
+		min-width: 1280px;
+	}
+
+
+	
 }
