--- a/styles.css
+++ b/styles.css
@@ -292,6 +292,7 @@ nav li a {
     display: block;
     padding: 20px;
     text-decoration: none;
+    color: #EB5428;
 }
 nav a{
     font-family: "Bebas Neue", serif;
@@ -382,6 +383,8 @@ nav li:last-child {
     font-size: 20px;
     color:#EB5428;
     padding: 0.5rem;
+	position: relative;
+	bottom:100px;
 }
 
 #social h2, footer h2, footer h3 {
@@ -396,6 +399,7 @@ form {
 
 #search {
 	display: flex;
+	border: solid 3px#EB5428;
 }
 
 input {
@@ -411,19 +415,18 @@ footer {
     font-weight: 400;
     font-style: normal;
     font-size: 20px;
-    padding-bottom: 3rem;
 }
 
 footer img {
 	width: 200px;
 	position: relative;
 	left: 100px;
-	bottom: 40px;
+	bottom: 150px;
 }
 
 small {
 	position: relative;
-	top:240px;
+	top:100px;
     left: 90px;
 	padding: 1rem;
 }
@@ -439,7 +442,7 @@ small {
 	nav {
 		display:block;
         padding-bottom: 7rem;
-		width: 93%;
+		width: 95%;
 	}
     
 	nav ul {
@@ -459,12 +462,6 @@ small {
 		width: 80px;
 	}
 
-	form {
-		position: fixed;
-		z-index:5;
-		top:30px;
-		left: 400px
-	}
 
     h1 {
 		text-align: left;
@@ -517,25 +514,69 @@ small {
 		position: relative;
 		bottom: 40px;
 		grid-column-start:2;
+        padding-right: 1rem;
 	}
 
-	footer {
-		display: grid;
-		grid-template-columns: 2fr 1fr;
+    #social ul {
+        display: flex;
+        justify-content:center;
+    }
 
-	}
+    #social li {
+        font-family: "Bebas Neue", serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 20px;
+        color:#EB5428;
+        padding: 0.5rem;
+        position: relative;
+        bottom:70px;
+		left: 230px;
+    }
 
-	footer img {
-		grid-column-start: 1;
-		width: 350px;
-		left: 40px;
-		bottom: 240px;
-	}
+    #social h2, footer h2, footer h3 {
+        visibility:hidden;
+    }
+
+    form {
+        position: fixed;
+        top: 30px;
+        left: 450px;
+		z-index:5;
+    }
+
+    #search {
+        display: flex;
+    }
+
+    input {
+        font-family: "Montserrat", serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 16px;
+    }
+
+    footer {
+        background-color: #F2F2F2;
+        font-family: "Bebas Neue", serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 20px;
+    }
+
+    footer img {
+        width: 200px;
+        position: relative;
+        left:-200px;
+        bottom: 230px
+    }
 
     small {
-		grid-column-start: 1;
-		top: 10rem;
-	}
+        position: relative;
+        top: -180px;
+        left: 40px;
+        padding: 1rem;
+    }
 	
 	
 
@@ -548,6 +589,88 @@ small {
 		min-width: 1280px;
 	}
 
+	h1 {
+		position: relative;
+		left: 520px;
+		top: 40px;
+	}
 
-	
+    form {
+		position: absolute;
+		top: 130px;
+		left: 550px;
+	}
+
+    header {
+        
+    }
+
+	#mainmenu {
+		display: grid;
+		grid-template-columns:1fr 6fr 7fr;
+		padding: 2rem;
+	}
+
+	menu {
+		display: inline-flex;
+		flex-direction: column;
+		bottom: 240px;
+	}
+
+
+    nav {
+		display:inline-flex;
+        height:0px;
+	}
+
+    nav a{
+		position: relative;
+		left: 200px;
+	}
+
+    #sign-in {
+		position:relative;
+		left:0px;
+	}
+
+    #details {
+		background-color: #0D0D0D;
+		color: #7ABFBF;
+
+	}
+
+	#details dl {
+		display: grid;
+		grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+	}
+    
+    #details dt {
+		position:relative;
+		left: -5px;
+		grid-row-start: 1;
+		width: 100%;
+	}
+
+	#snacks {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		padding-bottom: 2rem;
+        margin-bottom: 1rem;
+	}
+
+    #social li {
+		display: grid;
+		grid-template-columns:1fr 2fr;
+	}
+
+	footer img {
+		width: 400px;
+	}
+
+	small {
+		left:130px
+	}
+
+
+
 }
